# ego-knowledge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  ROADMAP.md
docs/explanation/: architecture-layers.md  fts-strategy.md  stable-slug.md  transactions.md  why-registry-is-dao.md
docs/frontend-demo/: README.md
docs/how-to/: add-new-kind.md  add-new-relation-type.md  agent-write-flow.md  body-update-standard.md  debug-catalog-drift.md  doctor-common-issues.md  governance-lifecycle.md  migrate-schema.md  orchestration-workflows.md  run-doctor-and-diagnose.md
docs/reference/: cli-commands.md  conflict-policies.md  data-model.md  error-types.md  mcp-tools.md  module-index.md  search-contract.md
docs/tutorials/: extending-with-new-kind-part2.md  extending-with-new-kind.md  first-knowledge-entry.md
migrations/: .gitkeep
schemas/: concept.schema.json  decision.schema.json  dossier.schema.json  entry-common.schema.json  note.schema.json  relation.schema.json  source.schema.json  view.schema.json
scripts/: README.md  threshold_dryrun.py  watch_github_cron.sh
src/ego_knowledge/: __init__.py  _approval_executor.py  _autonomous.py  _build.py  _dense_embedder.py  _dense_index.py  _dense_queue.py  _domains.py  _embedding_hash.py  _entry_store.py  _external_watch.py  _frontmatter_coercion.py  _graph_authority.py  _md_format.py  _mutations.py  _promotion.py  _query_preprocess.py  _relations.py  _review_cli.py  _secrets.py  _serde.py  _validation.py  cli.py  core.py  diagnose.py  errors.py  frontmatter.py  local_rules.py  maintenance_queue_store.py  (+7 more)
tests/: __init__.py  conftest.py
(+220 files in other folders)
